--- a/geschichte.html
+++ b/geschichte.html
@@ -17,9 +17,9 @@
         <nav class="main-nav">
             <ul>
                 <li><a href="projekt_kian.html">Home</a></li>
-                <li><a href="#history" class="active">Geschichte</a></li>
+                <li><a href="Geschichte.html">Geschichte</a></li>
                 <li><a href="subgenres.html">Subgenres</a></li>
-                <li><a href="galerie.html">Bands Galerie</a></li>
+                <li><a href="galerie.html" class="active">Band Galerie</a></li>
             </ul>
         </nav>
         <div class="button-container">
@@ -61,4 +61,5 @@ Heute ist Metal eine globale und extrem vielfältige Musikkultur mit unzähligen
         </footer>
     </main>
 </body>
+
 </html>
