--- a/subgenres.html
+++ b/subgenres.html
@@ -15,11 +15,11 @@
             <h1>Metal World</h1>
         </div>
         <nav class="main-nav">
-            <ul>
+             <ul>
                 <li><a href="projekt_kian.html">Home</a></li>
-                <li><a href="geschichte.html">Geschichte</a></li>
-                <li><a href="subgenres.html" class="active">Subgenres</a></li>
-                <li><a href="galerie.html">Bands Galerie</a></li>
+                <li><a href="Geschichte.html">Geschichte</a></li>
+                <li><a href="subgenres.html">Subgenres</a></li>
+                <li><a href="galerie.html" class="active">Band Galerie</a></li>
             </ul>
         </nav>
     
@@ -74,3 +74,4 @@
 </body>
 
 </html>
+
