--- a/subgenres.html
+++ b/subgenres.html
@@ -18,8 +18,8 @@
              <ul>
                 <li><a href="projekt_kian.html">Home</a></li>
                 <li><a href="Geschichte.html">Geschichte</a></li>
-                <li><a href="subgenres.html">Subgenres</a></li>
-                <li><a href="galerie.html" class="active">Band Galerie</a></li>
+                <li><a href="subgenres.html"  class="active">Subgenres</a></li>
+                <li><a href="galerie.html">Band Galerie</a></li>
             </ul>
         </nav>
     
@@ -74,4 +74,5 @@
 </body>
 
 </html>
+
 
