--- a/subgenres.html
+++ b/subgenres.html
@@ -17,7 +17,7 @@
         <nav class="main-nav">
              <ul>
                 <li><a href="projekt_kian.html">Home</a></li>
-                <li><a href="Geschichte.html">Geschichte</a></li>
+                <li><a href="geschichte.html">Geschichte</a></li>
                 <li><a href="subgenres.html"  class="active">Subgenres</a></li>
                 <li><a href="galerie.html">Band Galerie</a></li>
             </ul>
@@ -74,5 +74,6 @@
 </body>
 
 </html>
+
 
 
