--- a/subgenres.html
+++ b/subgenres.html
@@ -16,7 +16,7 @@
         </div>
         <nav class="main-nav">
              <ul>
-                <li><a href="projekt_kian.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="geschichte.html">Geschichte</a></li>
                 <li><a href="subgenres.html"  class="active">Subgenres</a></li>
                 <li><a href="galerie.html">Band Galerie</a></li>
@@ -74,6 +74,7 @@
 </body>
 
 </html>
+
 
 
 
