--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <nav class="main-nav">
             <ul>
-                <li><a href="projekt_kian.html" class="active">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="geschichte.html">Geschichte</a></li>
                 <li><a href="subgenres.html">Subgenres</a></li>
                 <li><a href="galerie.html">Bands Galerie</a></li>
@@ -59,3 +59,4 @@
     </main>
 </body>
 </html>
+
