--- a/geschichte.html
+++ b/geschichte.html
@@ -17,9 +17,9 @@
         <nav class="main-nav">
             <ul>
                 <li><a href="projekt_kian.html">Home</a></li>
-                <li><a href="Geschichte.html">Geschichte</a></li>
-                <li><a href="subgenres.html">Subgenres</a></li>
-                <li><a href="galerie.html" class="active">Band Galerie</a></li>
+                <li><a href="geschichte.html">Geschichte</a></li>
+                <li><a href="subgenres.html" class="active">Subgenres</a></li>
+                <li><a href="galerie.html">Band Galerie</a></li>
             </ul>
         </nav>
         <div class="button-container">
@@ -63,3 +63,4 @@ Heute ist Metal eine globale und extrem vielfältige Musikkultur mit unzähligen
 </body>
 
 </html>
+
