--- a/geschichte.html
+++ b/geschichte.html
@@ -17,8 +17,8 @@
         <nav class="main-nav">
             <ul>
                 <li><a href="projekt_kian.html">Home</a></li>
-                <li><a href="geschichte.html">Geschichte</a></li>
-                <li><a href="subgenres.html" class="active">Subgenres</a></li>
+                <li><a href="geschichte.html" class="active">Geschichte</a></li>
+                <li><a href="subgenres.html">Subgenres</a></li>
                 <li><a href="galerie.html">Band Galerie</a></li>
             </ul>
         </nav>
@@ -63,4 +63,5 @@ Heute ist Metal eine globale und extrem vielfältige Musikkultur mit unzähligen
 </body>
 
 </html>
+
 
