--- a/galerie.html
+++ b/galerie.html
@@ -17,7 +17,7 @@
         <nav class="main-nav">
             <ul>
                 <li><a href="projekt_kian.html">Home</a></li>
-                <li><a href="Geschichte.html">Geschichte</a></li>
+                <li><a href="geschichte.html">Geschichte</a></li>
                 <li><a href="subgenres.html">Subgenres</a></li>
                 <li><a href="galerie.html" class="active">Band Galerie</a></li>
             </ul>
@@ -186,4 +186,5 @@
         </footer>
     </main>
 </body>
+
 </html>
