--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="geschichte.html">Geschichte</a></li>
                 <li><a href="subgenres.html">Subgenres</a></li>
-                <li><a href="galerie.html">Bands Galerie</a></li>
+                <li><a href="galerie.html">Band Galerie</a></li>
             </ul>
         </nav>
 
@@ -59,4 +59,5 @@
     </main>
 </body>
 </html>
+
 
