--- a/geschichte.html
+++ b/geschichte.html
@@ -16,7 +16,7 @@
         </div>
         <nav class="main-nav">
             <ul>
-                <li><a href="projekt_kian.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="geschichte.html" class="active">Geschichte</a></li> 
                 <li><a href="subgenres.html">Subgenres</a></li>
                 <li><a href="galerie.html">Band Galerie</a></li>
@@ -63,6 +63,7 @@ Heute ist Metal eine globale und extrem vielfältige Musikkultur mit unzähligen
 </body>
 
 </html>
+
 
 
 
