--- a/galerie.html
+++ b/galerie.html
@@ -16,7 +16,7 @@
         </div>
         <nav class="main-nav">
             <ul>
-                <li><a href="projekt_kian.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="geschichte.html">Geschichte</a></li>
                 <li><a href="subgenres.html">Subgenres</a></li>
                 <li><a href="galerie.html" class="active">Band Galerie</a></li>
@@ -188,3 +188,4 @@
 </body>
 
 </html>
+
